--- a/src/app/Pages/adddriver/adddriver.component.html
+++ b/src/app/Pages/adddriver/adddriver.component.html
@@ -289,6 +289,7 @@
               class="btn btn-outline-success"
               [disabled]="formDriver.invalid"
               (click)="createDriver()"
+              title="Save Driver Form"
             >
               Save
             </button>
@@ -296,6 +297,7 @@
               type="button"
               class="btn btn-outline-secondary"
               (click)="resetForm()"
+              title="Reset Driver Form"
             >
               Reset
             </button>
