--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -437,6 +437,7 @@
               class="btn btn-outline-primary"
               [disabled]="formTraining.invalid"
               (click)="createTraining()"
+              title="Save Training Form"
             >
               Save
             </button>
@@ -444,6 +445,7 @@
               type="button"
               class="btn btn-outline-secondary"
               (click)="formRest()"
+              title="Reset Training Form"
             >
               Reset
             </button>
