--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -38,6 +38,7 @@
           class="btn btn-primary"
           type="button"
           (click)="getSessionData()"
+          title="Search Session"
         >
           <i class="fa-brands fa-searchengin me-1"></i>Search
         </button>
@@ -47,6 +48,7 @@
           class="btn btn-primary"
           type="button"
           (click)="downloadSessionReport(session())"
+          title="Download PDF"
         >
           <i class="fa-solid fa-file-pdf me-1"></i>Download Report
         </button>
