--- a/src/app/Pages/bloodgroup/bloodgroup.component.html
+++ b/src/app/Pages/bloodgroup/bloodgroup.component.html
@@ -93,6 +93,7 @@
                 update(item.id, item.name, item.description);
                 item.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -100,6 +101,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="item.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -109,6 +111,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(item)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -177,6 +180,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -188,6 +192,7 @@
             "
             [disabled]="formSaveBg.invalid"
             data-bs-dismiss="modal"
+            title="Saved Form"
           >
             Save changes
           </button>
