--- a/src/app/Pages/client/client.component.html
+++ b/src/app/Pages/client/client.component.html
@@ -158,6 +158,7 @@
                 );
                 item.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -165,6 +166,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="item.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -174,6 +176,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(item)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -295,10 +298,12 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
           <button
+            title="Save Form"
             type="submit"
             class="btn btn-primary"
             (click)="
