--- a/src/app/Pages/dltype/dltype.component.html
+++ b/src/app/Pages/dltype/dltype.component.html
@@ -93,6 +93,7 @@
                 updateDLType(dltype.id, dltype.name, dltype.description);
                 dltype.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -100,6 +101,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="dltype.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -109,6 +111,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(dltype)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -177,6 +180,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -191,6 +195,7 @@
             "
             [disabled]="formSaveDLType.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
