--- a/src/app/Pages/guestdashboard/guestdashboard.component.html
+++ b/src/app/Pages/guestdashboard/guestdashboard.component.html
@@ -103,6 +103,7 @@
           class="btn btn-primary btn-sm"
           [disabled]="formSession.invalid"
           (click)="getFillterredData()"
+          title="Search Form"
         >
           <i class="fa-brands fa-searchengin me-1"></i>Search
         </button>
@@ -111,6 +112,7 @@
           type="button"
           class="btn btn-secondary btn-sm ms-1"
           (click)="formRest()"
+          title="Reset Form"
         >
           <i class="fa-solid fa-window-restore me-1"></i>Reset
         </button>
