--- a/src/app/Pages/layout/layout.component.html
+++ b/src/app/Pages/layout/layout.component.html
@@ -24,7 +24,11 @@
           [formControl]="searchControl"
           aria-label="Search"
         />
-        <button class="btn btn-outline-light btn-sm" type="submit">
+        <button
+          class="btn btn-outline-light btn-sm"
+          type="submit"
+          title="Search Driver"
+        >
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
 
