--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -49,6 +49,7 @@
           type="submit"
           [disabled]="formLogin.invalid"
           class="animation a6"
+          title="Login Button"
         >
           LOGIN
         </button>
