--- a/src/app/Pages/pagenotfound/pagenotfound.component.html
+++ b/src/app/Pages/pagenotfound/pagenotfound.component.html
@@ -59,10 +59,15 @@
     <p>Page not found</p>
     <div class="buttons-con">
       <div class="action-link-wrap">
-        <a onclick="history.back(-1)" class="link-button link-back-button"
+        <a
+          onclick="history.back(-1)"
+          class="link-button link-back-button"
+          title="Navigate to Back Page"
           >Go Back</a
         >
-        <a href="/login" class="link-button">Go to Home Page</a>
+        <a href="/login" class="link-button" title="Navigate to Home Page"
+          >Go to Home Page</a
+        >
       </div>
     </div>
   </div>
