--- a/src/app/Pages/title/title.component.html
+++ b/src/app/Pages/title/title.component.html
@@ -88,6 +88,7 @@
                 update(title.id, title.name, title.description);
                 title.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -95,6 +96,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="title.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -104,6 +106,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(title)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -172,6 +175,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -183,6 +187,7 @@
             "
             [disabled]="formSaveTitle.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
