--- a/src/app/Pages/trainers/trainers.component.html
+++ b/src/app/Pages/trainers/trainers.component.html
@@ -123,6 +123,7 @@
                 );
                 trainer.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -130,6 +131,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="trainer.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -139,6 +141,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(trainer)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -230,6 +233,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -246,6 +250,7 @@
             "
             [disabled]="formSaveTrainer.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
