--- a/src/app/Pages/vehicle/vehicle.component.html
+++ b/src/app/Pages/vehicle/vehicle.component.html
@@ -92,6 +92,7 @@
                 update(vehicle.id, vehicle.name, vehicle.description);
                 vehicle.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -99,6 +100,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="vehicle.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -108,6 +110,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(vehicle)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -176,6 +179,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -190,6 +194,7 @@
             "
             [disabled]="formSaveVehicle.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
