--- a/src/app/Widgets/activities/activities.component.html
+++ b/src/app/Widgets/activities/activities.component.html
@@ -129,6 +129,7 @@
               );
               item.isEdit = false
             "
+            title="Update Changes"
           >
             <i class="fa-regular fa-floppy-disk"></i>
             save
@@ -136,6 +137,7 @@
           <button
             class="btn btn-sm btn-outline-danger ms-1"
             (click)="deleteActivity(item.id); item.isEdit = false"
+            title="Delete Activity"
           >
             <i class="fa-solid fa-trash-can"></i>
             delete
@@ -143,13 +145,18 @@
           <button
             class="btn btn-sm btn-outline-primary ms-1"
             (click)="item.isEdit = false"
+            title="Cancel"
           >
             <i class="fa-regular fa-rectangle-xmark"></i>
             cancel
           </button>
         </div>
         <div *ngIf="!item.isEdit">
-          <button class="btn btn-sm btn-outline-primary" (click)="onEdit(item)">
+          <button
+            class="btn btn-sm btn-outline-primary"
+            (click)="onEdit(item)"
+            title="Edit"
+          >
             <i class="far fa-edit"></i>
             edit
           </button>
@@ -253,7 +260,12 @@
         </form>
       </div>
       <div class="modal-footer bg-info-subtle">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+          title="Close without saving"
+        >
           Close
         </button>
         <button
@@ -270,6 +282,7 @@
           "
           [disabled]="formActivity.invalid"
           data-bs-dismiss="modal"
+          title="Save Form"
         >
           Save changes
         </button>
