--- a/src/app/Widgets/profile/profile.component.html
+++ b/src/app/Widgets/profile/profile.component.html
@@ -149,10 +149,20 @@
 
       <!-- Modal footer -->
       <div class="modal-footer bg-info-subtle">
-        <button type="submit" class="btn btn-primary" (click)="saveForm()">
+        <button
+          type="submit"
+          class="btn btn-primary"
+          (click)="saveForm()"
+          title="Save Form"
+        >
           Save
         </button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+          title="Close without saving"
+        >
           Close
         </button>
       </div>
