--- a/src/app/Widgets/slavecategory/slavecategory.component.html
+++ b/src/app/Widgets/slavecategory/slavecategory.component.html
@@ -115,6 +115,7 @@
               );
               item.isEdit = false
             "
+            title="Update Changes"
           >
             <i class="fa-regular fa-floppy-disk"></i>
             save
@@ -122,6 +123,7 @@
           <button
             class="btn btn-sm btn-outline-danger ms-1"
             (click)="delete(item.id); item.isEdit = false"
+            title="Delete Category"
           >
             <i class="fa-solid fa-trash-can"></i>
             delete
@@ -129,13 +131,18 @@
           <button
             class="btn btn-sm btn-outline-primary ms-1"
             (click)="item.isEdit = false"
+            title="Cancel"
           >
             <i class="fa-regular fa-rectangle-xmark"></i>
             cancel
           </button>
         </div>
         <div *ngIf="!item.isEdit">
-          <button class="btn btn-sm btn-outline-primary" (click)="onEdit(item)">
+          <button
+            class="btn btn-sm btn-outline-primary"
+            (click)="onEdit(item)"
+            title="Edit"
+          >
             <i class="far fa-edit"></i>
             edit
           </button>
@@ -258,6 +265,7 @@
           "
           [disabled]="formSecondaryCategory.invalid"
           data-bs-dismiss="modal"
+          title="Save Form"
         >
           Save changes
         </button>
