--- a/src/app/Pages/allusers/allusers.component.html
+++ b/src/app/Pages/allusers/allusers.component.html
@@ -253,6 +253,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close modal without saving"
           >
             Close
           </button>
@@ -267,6 +268,7 @@
             "
             [disabled]="formPassword.invalid"
             data-bs-dismiss="modal"
+            title="Save New Password"
           >
             Save changes
           </button>
