--- a/src/app/Pages/configureassessment/configureassessment.component.html
+++ b/src/app/Pages/configureassessment/configureassessment.component.html
@@ -29,6 +29,7 @@
         role="tab"
         aria-controls="tab1"
         aria-selected="true"
+        title="Primary Category"
       >
         Primary Category
       </button>
@@ -43,6 +44,7 @@
         role="tab"
         aria-controls="tab2"
         aria-selected="false"
+        title="Secondary Category"
       >
         Secondary Category
       </button>
@@ -57,6 +59,7 @@
         role="tab"
         aria-controls="tab3"
         aria-selected="false"
+        title="Activities"
       >
         Activities
       </button>
