--- a/src/app/Pages/driversreport/driversreport.component.html
+++ b/src/app/Pages/driversreport/driversreport.component.html
@@ -43,6 +43,7 @@
               type="submit"
               [disabled]="formSelectContractor.invalid"
               (click)="downloadDriverReport(drivers())"
+              title="Download PDF"
             >
               <i class="fa-solid fa-file-pdf me-1"></i>Driver Report
             </button>
@@ -60,6 +61,7 @@
           class="btn btn-success"
           type="button"
           (click)="downloadDriverReport(drivers())"
+          title="Download PDF"
         >
           <i class="fa-solid fa-file-pdf me-1"></i>Driver Report
         </button>
