--- a/src/app/Pages/location/location.component.html
+++ b/src/app/Pages/location/location.component.html
@@ -101,6 +101,7 @@
                 );
                 location.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -108,6 +109,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="location.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -117,6 +119,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(location)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -185,6 +188,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -199,6 +203,7 @@
             "
             [disabled]="formSaveLocation.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
