--- a/src/app/Pages/stage/stage.component.html
+++ b/src/app/Pages/stage/stage.component.html
@@ -88,6 +88,7 @@
                 update(stage.id, stage.name, stage.description);
                 stage.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -95,6 +96,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="stage.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -104,6 +106,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(stage)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -172,6 +175,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -181,6 +185,7 @@
             (click)="
               create(formSaveStage.value.name, formSaveStage.value.description)
             "
+            title="Save Form"
             [disabled]="formSaveStage.invalid"
             data-bs-dismiss="modal"
           >
