--- a/src/app/Pages/trainingdetail/trainingdetail.component.html
+++ b/src/app/Pages/trainingdetail/trainingdetail.component.html
@@ -23,7 +23,7 @@
           </div>
           <div class="col-auto text-primary">
             <h3>
-              <i class="fa-regular fa-user me-1"></i
+              <i class="fa-solid fa-file-pen me-1"></i
               >{{ formTraining.get("name")?.value }}
             </h3>
             <p>
@@ -55,6 +55,7 @@
               class="btn btn-outline-primary btn-sm ms-1"
               type="button"
               routerLink="/addtraining"
+              title="Add Training"
             >
               <i class="fa-solid fa-circle-plus"></i>
               Add New Training
@@ -63,6 +64,7 @@
               class="btn btn-outline-primary btn-sm ms-1"
               type="button"
               (click)="printPage()"
+              title="Print Page"
             >
               <i class="fa-solid fa-print"></i>
               Print
@@ -71,6 +73,7 @@
               type="submit"
               class="btn btn-outline-primary btn-sm ms-1"
               (click)="openSearchModal()"
+              title="Session Search Modal"
             >
               <i class="fa-regular fa-circle-user me-1"></i>Select Sessions
             </button>
@@ -80,6 +83,7 @@
               class="btn btn-outline-primary btn-sm ms-1"
               type="submit"
               (click)="updateTraining(); toggleEdit()"
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               Save
@@ -89,6 +93,7 @@
               type="reset"
               class="btn btn-outline-secondary btn-sm ms-1"
               (click)="resetForm()"
+              title="Reset From"
             >
               <i class="fa-solid fa-window-restore"></i>
               Reset
@@ -96,6 +101,7 @@
             <button
               class="btn btn-outline-primary btn-sm ms-1"
               (click)="toggleEdit()"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -105,6 +111,7 @@
               class="btn btn-outline-primary btn-sm ms-1"
               type="button"
               (click)="toggleEdit()"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
 
