--- a/src/app/Pages/visual/visual.component.html
+++ b/src/app/Pages/visual/visual.component.html
@@ -88,6 +88,7 @@
                 update(visual.id, visual.name, visual.description);
                 visual.isEdit = false
               "
+              title="Update Changes"
             >
               <i class="fa-regular fa-floppy-disk"></i>
               save
@@ -95,6 +96,7 @@
             <button
               class="btn btn-sm btn-outline-primary ms-1"
               (click)="visual.isEdit = false"
+              title="Cancel"
             >
               <i class="fa-regular fa-rectangle-xmark"></i>
               cancel
@@ -104,6 +106,7 @@
             <button
               class="btn btn-sm btn-outline-primary"
               (click)="onEdit(visual)"
+              title="Edit"
             >
               <i class="far fa-edit"></i>
               edit
@@ -172,6 +175,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            title="Close without saving"
           >
             Close
           </button>
@@ -186,6 +190,7 @@
             "
             [disabled]="formSaveVisual.invalid"
             data-bs-dismiss="modal"
+            title="Save Form"
           >
             Save changes
           </button>
