--- a/src/app/Widgets/sessionsearch/sessionsearch.component.html
+++ b/src/app/Widgets/sessionsearch/sessionsearch.component.html
@@ -37,6 +37,7 @@
             class="btn btn-primary"
             (click)="searchSessions()"
             [disabled]="searchForm.invalid"
+            title="Search Session"
           >
             Search
           </button>
@@ -86,10 +87,16 @@
           type="button"
           class="btn btn-primary"
           (click)="saveSelections()"
+          title="Save Selected Sessions"
         >
           Save Selections
         </button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+          title="Close witout saving"
+        >
           Close
         </button>
       </div>
